add endpoint for retrieving only the period stat
